# BROBOT-Robot-Companion-

./: README.md
brobot_Gazebo/: CMakeLists.txt  package.xml  setup.py
brobot_Gazebo/config/: brobot_Gazebo.yaml
brobot_Gazebo/description/: gazebo.xacro  include.xacro  manipulator.urdf.xacro
brobot_Gazebo/launch/: Gazebo_robot.launch.py
brobot_Gazebo/meshes/visual/: Body.stl  arm.stl  head.stl
brobot_Gazebo/scripts/: BrobotPos.py  brobot_trajectory_publsiher.py
brobot_controller/: CMakeLists.txt  package.xml
brobot_controller/launch/: brobot_start.launch.py
brobot_controller/model/: model.p
brobot_controller/scripts/: brobot_camera.py  brobot_current_timer.py  brobot_face_recognition.py  brobot_hand_gesture_recognition.py  brobot_hand_logic.py  brobot_interact.py  brobot_speak.py  brobot_voice_recognition.py
brobot_controller/src/: cpp_node.cpp
brobot_interfaces/: CMakeLists.txt  package.xml
brobot_interfaces/action/: SpeakAction.action
